# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

subdir('api')
subdir('mctc')
subdir('prog')
subdir('type')

srcs += files(
  'gfn0param.f90',
  'sphereparam.f90',
  'scanparam.f90',
  'splitparam.f90',
  'symparam.f90',
  'fixparam.f90',
  'aoparam.f90',
  'setparam.f90',
  'symbols.f90',
  'output_writer.f90',
  'readin.f90',
  'filetools.f90',
  'set_module.f90',
  'constrain_param.f90',
  'argparser.F90',
  'header.f90',
  'printout.f90',
  'xhelp.f90',
  'expire.f90',
  'define.f90',
  'readl.f90',
  'readl2.f90',
  'rdcoord2.f90',
  'wrbas.f90',
  'wrmo.f90',
  'main_property.f90',
  'main_json.f90',
  'main_geometry.f90',
  'gfn_prparam.f90',
  'wrgbw.f90',
  'enso_printout.f90',
  'read_gfn_param.f90',
  'molecule_reader.f90',
  'molecule_writer.f90',
  'tbmod_file_utils.f90',
  'gfn_paramset.f90',
  'setwll.f',
  'charge_model.f90',
  'iniq.f90',
  'eeq_model.f90',
  'xbasis.f90',
  'printbas.f90',
  'gauss.f90',
  'ncoord.f90',
  'dftd3.f',
  'dftd3_parameters.f90',
  'dftd4.f90',
  'dftd4_parameters.f90',
  'dispplot.f90',
  'gbobc.f90',
  'cm5.f90',
  'intpack.f90',
  'intgrad.f90',
  'aespot.f90',
  'scc_core.f90',
  'grad_core.f90',
  'scf_module.f90',
  'single.f90',
  'broyden.f',
  'pseudodiag.f90',
  'embedding.f90',
  'peeq_module.f90',
  'pbc_tools.f90',
  'generate_wsc.f90',
  'lidep.f90',
  'elem.f90',
  'asym.f90',
  'pqn.f90',
  'lin_mod.f90',
  'lin.f90',
  'printmold.f',
  'surfac.f',
  'esp.f',
  'shiftlp.f',
  'blowsy.f90',
  'onetri.f',
  'exchange.f',
  'local.f90',
  'makel.f90',
  'foden.f90',
  'hlex.f90',
  'cube.f90',
  'pbc.f90',
  'qpot.f90',
  'metadynamic.f90',
  'ls_rmsd.f90',
  'drsp.f',
  'stm.f',
  'axis_trafo.f90',
  'coffee.f90',
  'write_geometry.f90',
  'tmgrad.f90',
  'thermo.f90',
  'constr.f',
  'getsymnum.f90',
  'grid_module.f90',
  'qmdff.f90',
  'qmexternal.f90',
  'qcextern.f90',
  'neighbor.f',
  'zmatpr.f',
  'fragment.f',
  'restart.f90',
  'lopt.f90',
  'qsort.f90',
  'locmode.f',
  'intmodes.f',
  'wrmodef.f',
  'hessian.F90',
  'xbond.f90',
  'timing.f90',
  'prmat.f',
  'dipole.f90',
  'dtrafo.f90',
  'constrain_pot.f90',
  'basic_geo.f90',
  'approxrab.f90',
  'geoopt_driver.f90',
  'optimizer.f90',
  'relaxation_engine.f90',
  'bfgs.f90',
  'david.f',
  'david2.f90',
  'bias_path.f90',
  'geosum.f',
  'model_hessian.f90',
  'lindh.f',
  'scan_driver.f90',
  'symtranslib.f',
  'getname.f',
  'rmrottr.f',
  'matinv.f',
  'eqrot.f',
  'rmsd.f',
  'dynamic.f90',
  'shake_module.f90',
  'ifind.f',
  'spline2.f90',
  'spline3.f90',
  'anharmlib.f',
  'pocketscan.f',
  'screening.f90',
  'modef.f90',
  'mdoptim.f90',
  'cqpath.f90',
  'calculator.f90',
  'gfn0_calculator.f90',
  'gfn1_calculator.f90',
  'gfn2_calculator.f90',
)
