# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

subdir('api')
subdir('coulomb')
subdir('disp')
subdir('docking')
subdir('extern')
subdir('freq')
subdir('gfnff')
subdir('io')
subdir('iff')
subdir('main')
subdir('mctc')
subdir('param')
subdir('prog')
subdir('solv')
subdir('tblite')
subdir('type')
subdir('xtb')

srcs += files(
  'aespot.f90',
  'anharmlib.f90',
  'aoparam.f90',
  'approxrab.f90',
  'axis_trafo.f90',
  'basic_geo.f90',
  'bfgs.f90',
  'bias_path.f90',
  'blowsy.f90',
  'broyden.f90',
  'charge_model.f90',
  'coffee.f90',
  'constrain_param.f90',
  'constrain_pot.f90',
  'constr.f90',
  'cqpath.f90',
  'cube.f90',
  'david2.f90',
  'david.f',
  'define.f90',
  'detrotra.f90',
  'dipole.f90',
  'drsp.f',
  'dtrafo.f90',
  'dynamic.f90',
  'eeq_model.f90',
  'elem.f90',
  'embedding.f90',
  'enso_printout.f90',
  'eqrot.f90',
  'esp.f',
  'expire.f90',
  'features.F90',
  'filetools.F90',
  'fixparam.f90',
  'foden.f90',
  'fragment.f90',
  'generate_wsc.f90',
  'geoopt_driver.f90',
  'geosum.f90',
  'getkopt.f90',
  'getname.f90',
  'getsymnum.f90',
  'gfn0param.f90',
  'gfn_paramset.f90',
  'gfn_prparam.f90',
  'grad_core.f90',
  'header.f90',
  'hessian.F90',
  'hlex.f90',
  'ifind.f90',
  'iniq.f90',
  'intgrad.f90',
  'intmodes.f90',
  'intpack.f90',
  'lidep.f90',
  'lindh.f90',
  'lin.f90',
  'lin_mod.f90',
  'local.f90',
  'locmode.f90',
  'lopt.f90',
  'ls_rmsd.f90',
  'makel.f90',
  'matinv.f90',
  'mdoptim.f90',
  'metadynamic.f90',
  'modef.f90',
  'model_hessian.f90',
  'neighbor.f90',
  'onetri.f90',
  'oniom.f90',
  'optimizer.f90',
  'pbc.f90',
  'pbc_tools.f90',
  'peeq_module.f90',
  'pocketscan.f90',
  'pqn.f90',
  'printmold.f90',
  'printout.f90',
  'prmat.f90',
  'pseudodiag.f90',
  'qpot.f90',
  'qsort.f90',
  'rdcoord2.f90',
  'read_gfn_param.f90',
  'readin.f90',
  'readl2.f90',
  'readl.f90',
  'relaxation_engine.f90',
  'restart.f90',
  'rmrottr.f90',
  'rmsd.f90',
  'scan_driver.f90',
  'scanparam.f90',
  'scc_core.f90',
  'scf_module.F90',
  'screening.f90',
  'set_module.f90',
  'setparam.f90',
  'shake_module.f90',
  'shiftlp.f90',
  'single.f90',
  'slater.f90',
  'sphereparam.f90',
  'spline2.f90',
  'spline3.f90',
  'splitparam.f90',
  'stm.f',
  'surfac.f',
  'thermo.f90',
  'timing.f90',
  'topology.f90',
  'wrbas.f90',
  'wrgbw.f90',
  'wrmodef.f90',
  'wrmo.f90',
  'xhelp.f90',
  'zmatpr.f90',
)
