# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'axis.f',
  'd3com.f90',
  'dmat.f',
  'fermi.f',
  'frag_hess.f90',
  'gdisp0.f90',
  'gfnff_eg.f90',
  'gfnff_ini.f90',
  'gfnff_ini2.f90',
  'gfnff_param.f90',
  'gfnff_qm.f90',
  'gfnff_rab.f',
  'gfnff_setup.f90',
  'hess_stuff.f',
  'lin.f',
  'math.f',
  'mdcom.f90',
  'md.f',
  'mrec.f',
  'occu.f90',
  'shake_module.f',
  'shortest_distance.f90',
  'struc_converter.f90',
  'timing.f',
)
