# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'calculator.f90',
  'data.f90',
  'frag_hess.f90',
  'gdisp0.f90',
  'generator.f90',
  'gfnff_eg.f90',
  'gfnff_ini.f90',
  'gfnff_ini2.f90',
  'gfnff_param.f90',
  'gfnff_qm.f90',
  'gfnff_rab.f',
  'gfnff_setup.f90',
  'math.f',
  'mrec.f90',
  'neighbourlist.f90',
  'shake_module.f90',
  'struc_converter.f90',
  'topology.f90',
)
