# This file is part of xtb.
#
# Copyright (C) 2022 Sebastian Ehlert, Christoph Plett
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'calculator.f90',
  'data.f90',
  'iff_energy.f90',
  'iff_ini.f90',
  'iff_lmo.f90',
  'iff_prepare.f90',
)
