# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

subdir('blas')
subdir('lapack')

# MCTC library
srcs += files(
  'accuracy.f90',
  'boundaryconditions.f90',
  'chartools.f90',
  'convert.f90',
  'filetypes.f90',
  'io.f90',
  'math.f90',
  'namegen.f90',
  'resize.f90',
  'runtypes.f90',
  'search.f90',
  'sort.f90',
  'symbols.f90',
  'systools.F90',
  'thresholds.f90',
  'version.f90',
  'mctc_global.F90',
  'mctc_strings.f90',
  'mctc_constants.f90',
  'mctc_param.f90',
  'param/atomic_masses.f90',
  'param/chemical_hardnesses.f90',
  'param/covalent_radii.f90',
  'param/electronegativities.f90',
  'param/pse.f90',
  'param/r4r2_expectation_values.f90',
  'mctc_timings.f90',
  'mctc_filetools.f90',
  'linalg.f90',
  'lapack.f90',
  'blas.f90',
  'mctc_init.F90',
  'error.f90',
  'signal.c',
)
