# This file is part of xtb.
#
# Copyright (C) 2023 Marcel Müller
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'calculator.F90',
  'param.F90',
  'data.f90',
  'vdzp.F90',
  'twostepscf.F90',
  'integrals.F90',
  'mmlpopanalysis.F90',
  'ncoord.F90',
  'corebasis.F90',
  'hamiltonian.F90',
  'guess.F90',
  'paulixc.F90',
  'integral_types.F90',
  'coulomb.F90',
  'plusu.F90',
  'property.F90',
  'response.F90',
  'solver.F90',
)
