# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

subdir('ddcosmo')

srcs += files(
  'born.f90',
  'cm5.f90',
  'cosmo.f90',
  'cpx.F90',
  'gbsa.f90',
  'input.F90',
  'kernel.f90',
  'lebedev.f90',
  'model.f90',
  'sasa.f90',
  'state.f90',
  'ddvolume.f90',
)
