# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'anc.f90',
  'atomlist.f90',
  'basisset.f90',
  'buffer.f90',
  'calculator.f90',
  'coulomb.f90',
  'data.f90',
  'dispersion_model.f90',
  'environment.f90',
  'fragments.f90',
  'identitymap.f90',
  'iohandler.f90',
  'molecule.f90',
  'neighbourlist.f90',
  'latticepoint.f90',
  'options.f90',
  'param.f90',
  'pcem.f90',
  'reader.F90',
  'restart.F90',
  'setvar.f90',
  'solvation.f90',
  'timer.f90',
  'topology.f90',
  'wavefunction.f90',
  'wignerseitzcell.f90',
  'wsc.f90',
  'vendordata.f90',
)
