# This file is part of xtb.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'basisset.f90',
  'calculator.f90',
  'coulomb.f90',
  'data.f90',
  'dispersion.f90',
  'eeq.f90',
  'gfn0.f90',
  'gfn1.f90',
  'gfn2.f90',
  'halogen.f90',
  'hamiltonian.f90',
  'hamiltonian_gpu.f90',
  'multipole.f90',
  'repulsion.F90',
  'thirdorder.f90',
)
